Fix: Material.valueOf throws exception that causes unit test fail